PB | fixed db connection issues, fixed error

--- a/backend/.env.local
+++ b/backend/.env.local
@@ -6,7 +6,9 @@ DB_HOST = 127.0.0.1
 DB_PORT = 27017
 DB_DATABASE = test
 
-MONGO_URI = mongodb+srv://hrideshprasaddev:GIELkTNA3821@hclcare.qgrv2.mongodb.net/?retryWrites=true&w=majority&appName=HCLCare
+# MONGO_URI = mongodb+srv://hrideshprasaddev:GIELkTNA3821@hclcare.qgrv2.mongodb.net/?retryWrites=true&w=majority&appName=HCLCare
+MONGO_URI =  mongodb+srv://bhusnarpradip:rCPUlvA46wlPQttz@shipment-tracking.t4gwl.mongodb.net/?retryWrites=true&w=majority&appName=shipment-tracking
+
 
 # to generate secret key use below command
 # node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
